--- a/src/views/bill/z-bill/receive.html
+++ b/src/views/bill/z-bill/receive.html
@@ -26,7 +26,7 @@
                                 </div>
                             </div>
                             <div class="layui-inline">
-                                <label class="layui-form-label">租客姓名</label>
+                                <label class="layui-form-label">姓名</label>
                                 <div class="layui-input-inline">
                                     <input type="text" name="email"  autocomplete="off" class="layui-input gray" value="{{doc.ns(d[1].RecentName)}}" disabled>
                                 </div>
