--- a/src/views/contract/z-contract/view.html
+++ b/src/views/contract/z-contract/view.html
@@ -291,11 +291,11 @@
                 </div>
                 <div style="height:60px;">
                 </div>
-        <div class="form-bottom">
+        <!-- <div class="form-bottom">
             <div class="form-wrap" id="btnintableview">
               
             </div>
-        </div>
+        </div> -->
         </form>
     </div>
     </script>
