--- a/src/views/house/d-house/add.html
+++ b/src/views/house/d-house/add.html
@@ -255,7 +255,7 @@ img {
                       <div class="layui-inline"> 
                        <label class="layui-form-label">座/栋/号</label> 
                        <div class="layui-input-inline"> 
-                        <input type="text" name="BuildingNumber" autocomplete="off" class="layui-input" lay-verify="required|number"   /> 
+                        <input type="text" name="BuildingNumber" autocomplete="off" class="layui-input" lay-verify="required"   /> 
                        </div> 
                     </div> 
                        <div class="layui-inline"> 
