--- a/src/views/msystem/sysuser/index.html
+++ b/src/views/msystem/sysuser/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="m-search-item">
                     <label class="layui-form-label" style="width:auto;">真实姓名</label>
-                    <input type="text" name="Id" autocomplete="off" class="layui-input" placeholder="" id="Name" style="width:auto;">
+                    <input type="text" name="RealName" autocomplete="off" class="layui-input" placeholder="" id="Name" style="width:auto;">
                 </div>
                 <div class="m-search-item">
                         <label class="layui-form-label" style="width:auto;">手机号</label>
