--- a/src/views/house/d-house/index.html
+++ b/src/views/house/d-house/index.html
@@ -70,7 +70,7 @@
                     </div>
                     <div style="clear:both"></div>
                 </div>
-                <div class="m-wrap-body" id="m-wrap-body-{{index}}" parentid="{{item.Id}}">
+                <div class="m-wrap-body" id="m-wrap-body-{{item.Id}}" parentid="{{item.Id}}">
                     {{# if(item.list.length > 0){layui.each(item.list, function(indextop,itemtop) {}}
                     {{# if(itemtop.Status==2){ }}
                     <div class="m-panel-body" id="panel-body-{{itemtop.ID}}">
@@ -199,6 +199,7 @@
                      
                         <a class="layui-btn" id="edithousedepend">编辑当前公寓</a>
                         <a class="layui-btn" id="addhousedepend">添加楼层</a>
+                        <a class="layui-btn" id="deletehousedepend">删除公寓</a>
                     </div>
                     <div class="layui-right-nav">
                         <div id="house-othersrarch"></div>
