--- a/src/views/msystem/department/distribution.html
+++ b/src/views/msystem/department/distribution.html
@@ -275,7 +275,7 @@
 </script>
 <script type="text/html" id="toolbarDemo">
     <div class="layui-btn-container layui-inline">
-    <span class="layui-btn layui-btn-sm" lay-event="distribute">分配</span>
+    <span class="layui-btn" lay-event="distribute">分配</span>
   </div>
 </script>
 <div class="m-search othersearch">
