--- a/src/views/contract/y-contract/edit.html
+++ b/src/views/contract/y-contract/edit.html
@@ -980,6 +980,10 @@ function event(){
                             <div class="layui-input-inline">
                                     <input type="tel" name="CreateTime" autocomplete="off" class="layui-input"  id="CreateTime"  >
                             </div>
+                            <label class="layui-form-label">合同编号</label>
+                            <div class="layui-input-inline">
+                                    <input type="tel" name="contractnum"  value="{{doc.ns(d[1].contractnum)}}" placeholder="（自定义编号）选填" autocomplete="off" class="layui-input"  id="contractnum" >
+                            </div>
                     </div>
                     <div class="layui-form-item">
                         <div class="layui-form-item">
