--- a/src/views/contract/y-contract/view.html
+++ b/src/views/contract/y-contract/view.html
@@ -277,6 +277,10 @@
                         <div class="layui-input-inline" style="width: 150px;">
                             <input type="tel" name="CreateTime" autocomplete="off" value="{{d[1].CreateTime}}" class="layui-input gray" disabled id="Remark">
                         </div>
+                        <label class="layui-form-label">合同编号</label>
+                        <div class="layui-input-inline" style="width: 150px;">
+                            <input type="tel" name="contractnum" autocomplete="off" value="{{doc.ns(d[1].contractnum)}}" class="layui-input gray" disabled id="contractnum">
+                        </div>
                     </div>
                     </div>
                     <div class="layui-form-item">
