--- a/src/views/contract/z-contract/add.html
+++ b/src/views/contract/z-contract/add.html
@@ -389,6 +389,25 @@
 
             //监听提交
         form.on('submit(save)', function (data) {
+            var editid = "layuibillreceivebtn";
+            var view = layui.view;
+            layer.open({
+                id: editid,
+                type: 1,
+                title: '收款',
+                skin: 'two-layer',
+                shadeClose: true, //开启遮罩关闭
+                maxmin: true, //开启最大化最小化按钮
+                area: ['1000px', '90%'],
+                success: function(layero, index) {
+                    view(this.id).render(url, {
+                        id: data.Id,
+                        tableid: "bill-main-table",
+                        layerindex: index,
+                        btnOption:BtnOption
+                    });
+                }
+            });
             debugger;
             var datafield=data.field;
             if(houseid!=undefined){
@@ -786,7 +805,7 @@
         <div class="form-bottom">
                 <div class="form-wrap">
                     <button class="layui-btn layui-btn layui-btn-primary" id="cancelbtn" lay-filter="cancelbtn">取消</button>
-                    <button class="layui-btn" id="save" lay-filter="save" lay-submit="">保存</button>
+                    <button class="layui-btn" id="save" lay-filter="save" lay-submit="">创建合同</button>
                 </div>
             </div>
         </form>
